// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component should handle no tabs: no tabs 1`] = `
<tabs
  props="{
  "tabs": [],
  "activeTab": null,
  "className": "",
  "defaultActiveTab": 0,
  "hasOverflowScroll": false,
  "children": []
}"
>
  <div
    class="pf-l-grid curiosity-tabs-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-tabs pf-m-inset-none pf-m-inset-lg-on-md curiosity-tabs__no-scroll "
        data-ouia-component-id="OUIA-Generated-Tabs-2"
        data-ouia-component-type="PF4/Tabs"
        data-ouia-safe="true"
        id="generatedid-"
      >
        <ul
          class="pf-c-tabs__list"
          role="tablist"
        />
      </div>
    </div>
  </div>
</tabs>
`;

exports[`Tabs Component should render a basic component: basic 1`] = `
<tabs
  props="{
  "tabs": [
    {
      "title": "lorem",
      "content": "ipsum"
    },
    {
      "title": "dolor",
      "content": "sit"
    }
  ],
  "activeTab": null,
  "className": "",
  "defaultActiveTab": 0,
  "hasOverflowScroll": false,
  "children": []
}"
>
  <div
    class="pf-l-grid curiosity-tabs-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-tabs pf-m-inset-none pf-m-inset-lg-on-md curiosity-tabs__no-scroll "
        data-ouia-component-id="OUIA-Generated-Tabs-1"
        data-ouia-component-type="PF4/Tabs"
        data-ouia-safe="true"
        id="generatedid-"
      >
        <ul
          class="pf-c-tabs__list"
          role="tablist"
        >
          <li
            class="pf-c-tabs__item pf-m-current"
            role="presentation"
          >
            <button
              aria-controls="pf-tab-section-0-generatedid-"
              aria-selected="true"
              class="pf-c-tabs__link"
              data-ouia-component-type="PF4/TabButton"
              data-ouia-safe="true"
              id="pf-tab-0-generatedid-"
              role="tab"
              type="button"
            >
              <span
                class="pf-c-tabs__item-text"
              >
                lorem
              </span>
            </button>
          </li>
          <li
            class="pf-c-tabs__item"
            role="presentation"
          >
            <button
              aria-selected="false"
              class="pf-c-tabs__link"
              data-ouia-component-type="PF4/TabButton"
              data-ouia-safe="true"
              id="pf-tab-1-generatedid-"
              role="tab"
              type="button"
            >
              <span
                class="pf-c-tabs__item-text"
              >
                dolor
              </span>
            </button>
          </li>
        </ul>
      </div>
      <section
        aria-labelledby="pf-tab-0-generatedid-"
        class="pf-c-tab-content"
        data-ouia-component-type="PF4/TabContent"
        data-ouia-safe="true"
        id="pf-tab-section-0-generatedid-"
        role="tabpanel"
        tabindex="0"
      >
        ipsum
      </section>
    </div>
  </div>
</tabs>
`;
